--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask==3.0.3
-scikit-learn==1.5.1
-pandas==2.2.2
-numpy==2.1.1
-joblib==1.4.2
-gunicorn==22.0.0
+Flask==2.3.3
+scikit-learn==1.2.2
+pandas==1.5.3
+numpy==1.24.3
+gunicorn==21.2.0
+joblib==1.2.0
